搭建页面框架+页面适配

--- a/index.html
+++ b/index.html
@@ -11,6 +11,36 @@
 </head>
 
 <body>
+  <div class="viewport">
+    <div class="column">
+      <!--概览-->
+      <div></div>
+      <!--监控-->
+      <div></div>
+      <!--点位-->
+      <div></div>
+    </div>
+    <div class="column">
+      <!--地图-->
+      <div></div>
+      <!--用户-->
+      <div></div>
+    </div>
+    <div class="column">
+      <!--订单-->
+      <div></div>
+      <!--销售-->
+      <div></div>
+      <div>
+        <!--渠道-->
+        <div></div>
+        <!--季度-->
+        <div></div>
+      </div>
+      <!--排行-->
+      <div></div>
+    </div>
+  </div>
 
 </body>
 
